<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_new_character_title">Create New Character</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="create_character_button">Create Character</string>
    <string name="app_name">AltLife</string>
    <string name="fragment_game_title">Home Fragment</string>
    <string name="home_title">Home</string>
    <string name="welcome_message">Welcome,</string>
    <string name="game_coming_soon">Game Coming Soon!</string>
    <string name="new_game_button">New Game</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="mature_content">Mature Content Mode</string>
    <string name="life">Life</string>
    <string name="assets">Assets</string>
    <string name="career">Career</string>
    <string name="achievements">Achievements</string>
    <string name="pets">Pets</string>
    <string name="crimes">Crimes</string>
    <string name="saves">Saves</string>
    <string name="save_current">Save Current Game</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
</resources>